[package]
name = "top_cards"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
ureq = { version = "2", features = ["json"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
